[package]
name = "project_catalogue"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = {version = "1.0.130", features=["derive"]}
actix-web = "3"
actix-multipart = "0.3.0"
futures = "0.3.19"