[package]
name = "project_catalogue"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = {version = "1.0.130", features=["derive"]}
actix-web = "3"
actix-multipart = "0.3.0"
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-web-httpauth = "0.5.1"
actix-web-grants = "2.3.0"
futures = "0.3.19"
anyhow = "1.0.52"
mime_guess = "2.0.3"
